Firefox scrollbar fix

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -24,6 +24,12 @@ $background: #27006e;
 ##                 DEFAULTS                 ##
 ##############################################
 */
+:root {
+	scrollbar-color: #4200B7;
+	scrollbar-width: 10px;
+}
+
+
 body {
 	margin: 0;
 	padding: 0;
@@ -174,4 +180,22 @@ nav img {
 
 		top: 10%;
 	}
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #4200B7;
+	border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: #30009e;
+	border-radius: 0;
 }
